- Added `npm run verify:360:adapter:strict` helper for full verify runs with strict adapter doctor gating enabled.
- `verify:360` idempotence context now includes strict-mode flags, preventing replay-key collisions between strict and non-strict runs.
- Safe-run now enforces a non-blocking evidence corridor check before completion:
- Expected receipt artifacts are verified for presence and digest consistency.
- Pre-existing/stale unmanaged output files anywhere under the run out-root are flagged as orphan evidence.
- Analysis still completes; warnings are recorded deterministically in `operator_receipt.json` (`SAFE_RUN_EVIDENCE_*` codes).
- Added explicit smoke-test coverage for root-level stale output detection under the same non-blocking evidence-corridor behavior.
- `operator_receipt.json` now includes additive digest links for `weftend/README.txt` and run sub-receipts (`analysis/*`, `host/*`) to strengthen evidence-chain traceability.
- Universal artifact adapter expansion (analysis-only, deterministic, fail-closed):
- New safe-run adapter flags: `--adapter auto|none|archive|package|extension|iac|cicd|document|container|image|scm|signature`
- Optional repeatable plugin flag: `--enable-plugin <name>` (explicit local plugin use only)
- New adapter discovery command: `weftend adapter list`
- New adapter maintenance/health command: `weftend adapter doctor`
- Added readable doctor mode: `weftend adapter doctor --text` (deterministic local guidance, no auto-install/network).
- Added strict doctor mode: `weftend adapter doctor --strict` (fails closed on invalid policy state or unresolved missing-plugin requirements).
- Strict doctor JSON output now includes `strict.status` and `strict.reasonCodes` for machine-readable release gating.
- Added policy writer mode: `weftend adapter doctor --write-policy <path> [--include-missing-plugins]`.
- Policy writer now uses two-phase finalize (`<path>.stage -> <path>`) and fails closed with explicit write error on output failure.